# blade-ink-ffi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
include/: bink.h
src/: cchoices.rs  cexternal_functions.rs  cstory.rs  ctags.rs  cvalue.rs  cvars.rs  lib.rs
tests/: Makefile  bink_rt_test.c  bink_tags_test.c  bink_test.c  common.c  common.h
