[package]
name = "bink"
version = "0.2.0"
description = """
C bindings for the Blade Ink Rust library.
"""
license = "Apache-2.0"
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
readme = "README.md"
edition = "2021"

[lib]
name = "bink"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
bladeink = "0.9.2"
