[package]
name = "bink-ffi"
version = "0.4.2"
description = """
C bindings for the Blade Ink Rust library.
"""
license = "Apache-2.0"
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bladecoder/blade-ink-ffi.git"
edition = "2021"

[lib]
name = "bink"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
bladeink = "1.2.1"
